using System.Threading.Tasks;

namespace Game
{
    public interface Efeito
    {
        public Task RealizarEfeito();
    }
}