namespace Game
{
    public enum Personagem
    {
        BARCO,
        CACHORRO,
        CARRO,
        GATO
    }
}